# antennae

./: .gitignore  .gitignore_global  README.md  pgp-key.pub
.trunk/: trunk.yaml
algorhythm/: Cargo.toml
algorhythm/src/: main.rs  responses.rs  shortcuts.rs  views.rs
algorhythm/templates/: root.html
anno2200/: Dockerfile  requirements.txt
anno2200/src/: .coveragerc  .gitignore  lcov.info  manage.py
anno2200/src/anno/: asgi.py  settings.py  urls.py  wsgi.py
anno2200/src/metadata/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
anno2200/src/positions/: models.py  tests.py  urls.py  utils.py
anno2200/test_pgns/: Gata Kamsky_vs_Sam Shankland_2014.__.__.pgn  david-bronstein_vs_mikhail-botvinnik_25-may-1944.pgn  player1player2.pgn
dotfiles/: applications.yaml  docker.yaml  input.yaml  kubernetes.yaml  minimal.yml  os4.yaml  posix.yaml  requirements.yml  secrets.yaml  site.yml  userspace.yaml  vscode.yaml
k8s/: README.md
k8s/_init/: 00-bootstrap.yaml  10-storage.yaml  20-authentication.yaml  30-config.yaml
k8s/apps/: nzbhydra.yaml  usenet.yaml
k8s/apps/lab/: chia.yaml
k8s/config.mount/: admission-control.yaml
k8s/infrastructure/: cluster-config.yaml  metallb-values.yaml  purge.sh  secret-encryption.yaml  tigera-values.yaml  traefik-values.yaml
k8s/tf/: main.tf
kube-standup/: README.md  users.yml
kube-standup/ansible-install/: ClusterConfiguration.yaml  hosts  install.yml  master.yml
kube-standup/applications/: nginx.yml  nzbhydra.yml  usenet.yml  whoami.yml  xarr.yml
leetcode/: _template.py  lc_1046.py
utilities/: package.sh
(+82 files in other folders)
